<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    tools:context="com.example.priya.loginscreendemo.ui.MainActivity">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/auctioneer_logo"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorBg"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintDimensionRatio="h,1:0.2" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:0.1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"
        android:background="@color/colorPrimaryDark"
        android:drawableLeft="@mipmap/homeicon_white"
        android:drawableRight="@mipmap/searchicon_white"
        android:padding="15dp"
        android:id="@+id/textView2" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LOGIN"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/colorBlack"
        app:layout_constraintRight_toLeftOf="@+id/guideline1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.066"
        android:layout_marginStart="8dp" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:text="REGISTER"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/colorBlack"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="@+id/textView"
        android:layout_marginEnd="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline1" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Username"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp" />
    <EditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:ems="8"
        android:padding="2dp"
        android:inputType="textPersonName"
        android:background="@drawable/etlogin_shape"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline1"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp" />
    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/et_username"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline1"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:ems="8"
        android:padding="2dp"
        android:inputType="textPersonName"
        android:background="@drawable/etlogin_shape"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline1"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp" />
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline1"
        app:layout_constraintGuide_begin="192dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="192dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_three"
        android:text="@string/login"
        android:textAllCaps="false"
        android:background="@drawable/btn_shape"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintRight_toRightOf="@+id/et_password"
        android:layout_marginRight="8dp"
        android:textColor="@color/colorWhite"
        android:layout_marginEnd="8dp" />
    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_message"
        android:layout_marginTop="24dp"
        android:textSize="15dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintLeft_toLeftOf="@+id/guideline1" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorBg"
        android:textColor="@color/colorLoginBtn"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="@string/register"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_message"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline1" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_your_password"
        android:textColor="@color/colorBlack"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_three"
        android:text="Click Here"
        android:layout_marginTop="8dp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:layout_marginLeft="148dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        android:background="@drawable/forget_btn_shape"
        android:textColor="@color/colorWhite"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="148dp"
        android:layout_marginEnd="8dp" />
  <android.support.constraint.ConstraintLayout
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:id="@+id/layout2"
      android:layout_marginTop="@dimen/dimens_five"
      app:layout_constraintDimensionRatio="h,1:0.12"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      android:background="@color/colorPrimaryDark"
      app:layout_constraintBottom_toTopOf="@+id/textView6"
      app:layout_constraintTop_toBottomOf="@+id/button2">
      <TextView
          android:id="@+id/textView7"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="5dp"
          android:text="Contact Us"
          android:layout_marginLeft="20dp"
          app:layout_constraintTop_toTopOf="@+id/layout2"
          app:layout_constraintBottom_toBottomOf="@+id/layout2"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toLeftOf="@+id/view1"
          android:textColor="@color/colorWhite" />

      <View
          android:id="@+id/view1"
          android:layout_width="2dp"
          android:layout_height="25dp"
          android:backgroundTint="@color/colorWhite"
          android:padding="5dp"
          app:layout_constraintTop_toTopOf="@+id/layout2"
          app:layout_constraintBottom_toBottomOf="@+id/layout2"
          app:layout_constraintLeft_toRightOf="@+id/textView7"
          app:layout_constraintRight_toLeftOf="@+id/textView9"/>

      <TextView
          android:id="@+id/textView9"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="5dp"
          android:text="Privacy Policy "
          android:textColor="@color/colorWhite"
          app:layout_constraintTop_toTopOf="@+id/layout2"
          app:layout_constraintBottom_toBottomOf="@+id/layout2"
          app:layout_constraintLeft_toRightOf="@+id/view1"
          app:layout_constraintRight_toLeftOf="@+id/view2"/>
      <View
          android:id="@+id/view2"
          android:layout_width="2dp"
          android:layout_height="25dp"
          android:backgroundTint="@color/colorWhite"
          android:padding="5dp"
          app:layout_constraintTop_toTopOf="@+id/layout2"
          app:layout_constraintBottom_toBottomOf="@+id/layout2"
          app:layout_constraintLeft_toRightOf="@+id/textView9"
          app:layout_constraintRight_toLeftOf="@+id/textView8"/>
      <TextView
          android:id="@+id/textView8"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="5dp"
          android:text="Terms &amp; Condition"
          android:textColor="@color/colorWhite"
          app:layout_constraintTop_toTopOf="@+id/layout2"
          app:layout_constraintBottom_toBottomOf="@+id/layout2"
          app:layout_constraintLeft_toRightOf="@+id/view2"
          app:layout_constraintRight_toRightOf="parent"
          android:layout_marginRight="20dp"/>
  </android.support.constraint.ConstraintLayout>
    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:text="2017 Copy Right Powered by Acutioneer Software"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout2"
        />
</android.support.constraint.ConstraintLayout>
